--- a/barra de navegação.css
+++ b/barra de navegação.css
@@ -1,21 +1,61 @@
-   nav {
+  html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+  body { 
+    background-color: #e9dcc9;
+  }
+  nav {
      display: flex;
-     justify-content: space-around; /* Distribui os itens */
-     align-items: center; /* Alinha verticalmente */
-     background-color: #000000;
+     justify-content: space-around; 
+     align-items: center; 
+     background-color: #5c3a21;
      padding: 25px;
+    
    }
 
    nav ul {
      display: flex;
-     list-style: none; /* Remove marcadores de lista */
-     padding: px;
+     list-style: none; 
+     padding: 5px;
      margin: 0;
    }
 
-   nav ul li a {
+   nav ul li .opcoes {
      color: rgb(255, 255, 255);
      text-decoration: none;
      padding: 10px 20px;
      font-size: 20px;
    }
+
+   .opcoes:hover {
+    background: #803e2a;
+    padding: 30px 10px;
+    transition: 1s ;
+    color: #f4c542;
+    border-bottom: 10px groove white;
+   }
+
+ li {
+    border-bottom: 10px ;
+
+   }
+
+   
+   
